--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
+  <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
   <meta name="theme-color" content="#fafafa">
 </head>
-Access to internal resource at 'file:///C:/Users/Users/Documents/javascript_seito/site.webmanifest' from origin 
+
 <body>
 
   <div class="container">
